--- a/portforlio_app/templates/contact.html
+++ b/portforlio_app/templates/contact.html
@@ -108,14 +108,14 @@ whatsapp
 Github
     </a>
 
-    <a href="https://linkedin.com/in/yourusername" target='_blank'>
+    <a href="https://linkedin.com/in/elbangvevo" target='_blank'>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="24" height="24" fill="currentColor">
   <path d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 01107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"/>
 </svg>
 Linkedin
     </a>
 
-    <a href="https://t.me/yourusername" target="_blank">
+    <a href="https://t.me/ugo145" target="_blank">
     <svg class="telegram-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor">
         <path d="M446.7 98.6L382.8 401.6c-4.8 22.2-17.4 27.7-35.3 17.3l-97.6-72-47.1 45.3c-5.2 5.2-9.6 9.6-19.7 9.6l7-99.6 181.3-163.7c7.9-7-1.7-10.9-12.3-3.9L135.6 277.6l-96.4-30.1c-20.9-6.5-21.3-20.9 4.4-31l376.7-145.3c17.5-6.4 32.8 4.2 26.4 27.4z"/>
     </svg>
